# S11-25-Equipo-40-WebApp

./: README.md  docs
Backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  GIT_WORKFLOW.md  Makefile  README.md  alembic.ini  pyproject.toml
Backend/.githooks/: .githooks  README.md  check-gitmoji.sh
Backend/alembic/: env.py
Backend/alembic/versions/: 0f92ab804543_create_all_tables.py  7991169a5f38_api_key_table.py  c36d11daa061_update_user_for_multy_tenancy.py
Backend/app/: main.py
Backend/app/api/: index.py  main.py
Backend/app/api/router/: __init__.py  (+8 more)
Backend/app/core/: config.py  db.py  deps.py  jwt.py  securiry.py  security.py
Backend/app/models/: __init__.py  abstract.py  api_key.py  category.py  tag.py  testimonial.py  testimonial_tag_link.py  user.py
Backend/app/schemas/: __init__.py  api_key.py  auth.py  category.py  pagination.py  tag,py  tag.py  testimonial.py  testimonials.py  token.py  user.py
Backend/app/services/: AuthService.py  TestimonialsService.py  api_keys.py  auth.py  authService.py  category.py  cloudinary.py  tag.py  testimonial.py  user.py
Backend/docs/: DATABASE.md  GIT_WORKFLOW.md
Backend/scripts/: README.md  setup-hooks.sh
Backend/tests/: __init__.py  conftest.py  test_root.py
Backend/tests/models/: test_models.py
Backend/tests/schemas/: test_api_key_schema.py  test_schemas.py
Backend/tests/schermas/: test_schemas.py
Backend/tests/services/: test_api_keys.py  test_auth.py  test_category.py  test_cloudinary.py  test_tag.py  test_testimonial.py  test_user.py
(+29 files in other folders)
